# rabittai-firereach

./: .gitignore  DOCS.md  README.md  render.yaml
backend/: .env.example  .gitignore  README.md  agent.py  config.py  email_service.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  tools.py  vercel.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: AgentLog.jsx  AgentLog.module.css  BriefPanel.jsx  BriefPanel.module.css  EmailPreview.jsx  EmailPreview.module.css  OutreachForm.jsx  OutreachForm.module.css  SignalsPanel.jsx  SignalsPanel.module.css
